--- a/src/sign_in.css
+++ b/src/sign_in.css
@@ -1,6 +1,6 @@
 .sign-in {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   padding: 5px;
   width: 100vw;
 
@@ -11,5 +11,6 @@
 }
 
 .sign {
+  margin: 10px;
   color: white;
 }
